[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scenes/Hazards/HazardTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/SkyMine.gd" type="Script" id=2]
[ext_resource path="res://Graphics/SHMUP Tiles.png" type="Texture" id=3]
[ext_resource path="res://Graphics/Explosion.png" type="Texture" id=4]
[ext_resource path="res://CharacterPuppets/Scenes/2D/Modules/HealthSystem.tscn" type="PackedScene" id=5]
[ext_resource path="res://Audio/SFX/Shooting Sounds/SkyMineExplosion - Standard.wav" type="AudioStream" id=6]
[ext_resource path="res://Audio/SFX/Shooting Sounds/SkyMineTriggered.wav" type="AudioStream" id=7]
[ext_resource path="res://Scenes/Status Effects/IceSE.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Status Effects/ShockSE.tscn" type="PackedScene" id=9]
[ext_resource path="res://Graphics/White Circle.png" type="Texture" id=10]
[ext_resource path="res://Graphics/Shaders/HologramShader.material" type="Material" id=11]
[ext_resource path="res://Graphics/Elemental Icons.png" type="Texture" id=12]

[sub_resource type="CircleShape2D" id=9]
radius = 112.611

[sub_resource type="CircleShape2D" id=10]
radius = 90.312

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 31, 29 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 34, 29 )

[sub_resource type="Animation" id=11]
resource_name = "FrostExplode"
tracks/0/type = "value"
tracks/0/path = NodePath("Explosion/BurstOfIce:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Explosion/BurstOfIce:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Explosion/ExplosionSound:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Radius:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ElementalIcon_Radius:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.001, 0.001 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:region_enabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite:region_rect")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 68, 17, 16, 16 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Sprite:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Sprite:texture")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "StandardExplode"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:region_enabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../Audio/Explosion:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Radius:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/8/type = "method"
tracks/8/path = NodePath("..")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "destroy"
} ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("ElementalIcon_Radius:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Sprite/ElementalIcon_Mine:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=6]
resource_name = "Triggered"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.8, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.576471, 0.576471, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.576471, 0.576471, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.576471, 0.576471, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Audio/Triggered:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.78, 0.94, 1.08 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, true, true, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Radius:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ElementalIcon_Radius:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.001, 0.001 ), Vector2( 1, 1 ) ]
}

[node name="SkyMine" instance=ExtResource( 1 )]
scale = Vector2( 0.45, 0.45 )
collision_layer = 0
collision_mask = 6
script = ExtResource( 2 )
targets = [ "Player", "Enemy", "Hazard" ]
ice_status_effect = ExtResource( 8 )
shock_status_effect = ExtResource( 9 )
cam_effect = "ExplosionShake"

[node name="AreaCollider" parent="." index="0"]
z_index = 1
shape = SubResource( 9 )
disabled = true

[node name="TriggerZone" type="Area2D" parent="." index="1"]
visible = false
collision_layer = 0
collision_mask = 2

[node name="AreaCollider" type="CollisionShape2D" parent="TriggerZone" index="0"]
position = Vector2( 0, -1.90735e-06 )
z_index = 2
shape = SubResource( 10 )

[node name="Hitbox" type="KinematicBody2D" parent="." index="2" groups=["Hazard"]]
visible = false
collision_layer = 4
collision_mask = 0

[node name="AreaCollider" type="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 1, -1 )
shape = SubResource( 7 )

[node name="Modules" type="Node2D" parent="Hitbox" index="1"]

[node name="HealthSystem" parent="Hitbox/Modules" index="0" instance=ExtResource( 5 )]

[node name="Hitbox" parent="Hitbox/Modules/HealthSystem" index="0"]
monitoring = false
monitorable = false

[node name="AreaCollider" parent="Hitbox/Modules/HealthSystem/Hitbox" index="0"]
position = Vector2( 0, -3 )
shape = SubResource( 8 )

[node name="Radius" type="Sprite" parent="Visual" index="0"]
modulate = Color( 0.917647, 0.462745, 0.462745, 0.462745 )
self_modulate = Color( 1, 1, 1, 0 )
material = ExtResource( 11 )
position = Vector2( 1.25001, -2.38419e-07 )
scale = Vector2( 0.989583, 0.979167 )
texture = ExtResource( 10 )

[node name="ElementalIcon_Radius" type="Sprite" parent="Visual" index="1"]
position = Vector2( -1.49012e-07, 6.95387e-07 )
scale = Vector2( 0.001, 0.001 )
texture = ExtResource( 12 )
region_enabled = true
region_rect = Rect2( 52, 158, 70, 122 )

[node name="Sprite" type="Sprite" parent="Visual" index="2"]
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 68, 17, 16, 16 )

[node name="ElementalIcon_Mine" type="Sprite" parent="Visual/Sprite" index="0"]
modulate = Color( 0.223529, 0.278431, 0.317647, 1 )
position = Vector2( -4.96707e-08, 2.31796e-07 )
scale = Vector2( 0.02, 0.02 )
texture = ExtResource( 12 )
region_enabled = true
region_rect = Rect2( 52, 158, 70, 122 )
__meta__ = {
"_editor_description_": ""
}

[node name="Anim" type="AnimationPlayer" parent="Visual" index="3"]
anims/FrostExplode = SubResource( 11 )
anims/Idle = SubResource( 2 )
anims/StandardExplode = SubResource( 1 )
anims/Triggered = SubResource( 6 )

[node name="Audio" type="Node2D" parent="." index="4"]

[node name="Explosion" type="AudioStreamPlayer2D" parent="Audio" index="0"]
stream = ExtResource( 6 )
volume_db = -5.0
pitch_scale = 0.83
max_distance = 500.0
bus = "SFX"

[node name="Triggered" type="AudioStreamPlayer2D" parent="Audio" index="1"]
stream = ExtResource( 7 )
volume_db = 10.0
pitch_scale = 0.79
max_distance = 500.0
bus = "SFX"

[connection signal="area_entered" from="." to="." method="check_body"]
[connection signal="area_exited" from="." to="." method="area_exited"]
[connection signal="area_entered" from="TriggerZone" to="." method="check_body"]
[connection signal="area_exited" from="TriggerZone" to="." method="area_exited"]
[connection signal="Hurt" from="Hitbox/Modules/HealthSystem" to="." method="trigger_mine"]

[editable path="Hitbox/Modules/HealthSystem"]
